--- a/SimpleCalculator/war/WEB-INF/web.xml
+++ b/SimpleCalculator/war/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.principal.calculator.server.GreetingServiceImpl</servlet-class>
+    <servlet-class>com.principal.calculator.server.ConversionServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
